Added smoketest; extracted carousel